Implemented functions to push positions into DB, improved the UI. Added logic for matching and continued work on partial filling.